--- a/pvr.mediaportal.tvserver/resources/language/resource.language.en_us/strings.po
+++ b/pvr.mediaportal.tvserver/resources/language/resource.language.en_us/strings.po
@@ -21,8 +21,8 @@ msgid "Mediaportal Hostname"
 msgstr "MediaPortal Hostname"
 
 msgctxt "#30001"
-msgid "Mediaportal Kodi plugin Port"
-msgstr "MediaPortal Kodi plugin Port"
+msgid "Mediaportal MrMC plugin Port"
+msgstr "MediaPortal MrMC plugin Port"
 
 msgctxt "#30002"
 msgid "Free-to-air only"
@@ -241,5 +241,5 @@ msgid "Backend default"
 msgstr "Backend default"
 
 msgctxt "#30136"
-msgid "Kodi default"
-msgstr "Kodi default"
+msgid "MrMC default"
+msgstr "MrMC default"
