--- a/pvr.mediaportal.tvserver/resources/language/resource.language.sv_se/strings.po
+++ b/pvr.mediaportal.tvserver/resources/language/resource.language.sv_se/strings.po
@@ -21,8 +21,8 @@ msgid "Mediaportal Hostname"
 msgstr "Mediaportalvärdnamn"
 
 msgctxt "#30001"
-msgid "Mediaportal Kodi plugin Port"
-msgstr "Mediaportal Kodi-tilläggsport"
+msgid "Mediaportal MrMC plugin Port"
+msgstr "Mediaportal MrMC-tilläggsport"
 
 msgctxt "#30002"
 msgid "Free-to-air only"
@@ -245,8 +245,8 @@ msgid "Backend default"
 msgstr "Backend default"
 
 msgctxt "#30136"
-msgid "Kodi default"
-msgstr "Kodi default"
+msgid "MrMC default"
+msgstr "MrMC default"
 
 msgctxt "#30137"
 msgid "%d weeks"
