--- a/pvr.mediaportal.tvserver/resources/language/resource.language.be_by/strings.po
+++ b/pvr.mediaportal.tvserver/resources/language/resource.language.be_by/strings.po
@@ -21,8 +21,8 @@ msgid "Mediaportal Hostname"
 msgstr "Mediaportal Hostname"
 
 msgctxt "#30001"
-msgid "Mediaportal Kodi plugin Port"
-msgstr "Mediaportal Kodi plugin Port"
+msgid "Mediaportal MrMC plugin Port"
+msgstr "Mediaportal MrMC plugin Port"
 
 msgctxt "#30002"
 msgid "Free-to-air only"
