--- a/pvr.mediaportal.tvserver/resources/language/resource.language.ca_es/strings.po
+++ b/pvr.mediaportal.tvserver/resources/language/resource.language.ca_es/strings.po
@@ -21,8 +21,8 @@ msgid "Mediaportal Hostname"
 msgstr "Nom de màquina del MediaPortal"
 
 msgctxt "#30001"
-msgid "Mediaportal Kodi plugin Port"
-msgstr "Port del connector per al Kodi del MediaPortal"
+msgid "Mediaportal MrMC plugin Port"
+msgstr "Port del connector per al MrMC del MediaPortal"
 
 msgctxt "#30002"
 msgid "Free-to-air only"
@@ -90,11 +90,11 @@ msgstr "Reproducció"
 
 msgctxt "#30050"
 msgid "Your TVServerKodi version '%s' is too old. Please upgrade to '%s' or higher!"
-msgstr "La vostra versió de servidor de TV Kodi '%s' és massa antiga. Per favor, actualitzau a '%s' o superior!"
+msgstr "La vostra versió de servidor de TV MrMC '%s' és massa antiga. Per favor, actualitzau a '%s' o superior!"
 
 msgctxt "#30051"
 msgid "Your TVServerKodi version is too old. Please upgrade to '%s' or higher!"
-msgstr "La vostra versió de servidor de TV Kodi és massa antiga. Per favor, actualitzau a '%s' o superior!"
+msgstr "La vostra versió de servidor de TV MrMC és massa antiga. Per favor, actualitzau a '%s' o superior!"
 
 msgctxt "#30052"
 msgid "Recording playback failed. Empty URL of filename."
@@ -241,5 +241,5 @@ msgid "Backend default"
 msgstr "Backend per defecte"
 
 msgctxt "#30136"
-msgid "Kodi default"
-msgstr "Per defecte a Kodi"
+msgid "MrMC default"
+msgstr "Per defecte a MrMC"
