--- a/pvr.mediaportal.tvserver/resources/language/resource.language.de_de/strings.po
+++ b/pvr.mediaportal.tvserver/resources/language/resource.language.de_de/strings.po
@@ -21,8 +21,8 @@ msgid "Mediaportal Hostname"
 msgstr "Mediaportal Hostname oder IP-Adresse"
 
 msgctxt "#30001"
-msgid "Mediaportal Kodi plugin Port"
-msgstr "Mediaportal Plugin Kodi Port"
+msgid "Mediaportal MrMC plugin Port"
+msgstr "Mediaportal Plugin MrMC Port"
 
 msgctxt "#30002"
 msgid "Free-to-air only"
@@ -245,8 +245,8 @@ msgid "Backend default"
 msgstr "Backend-Standard"
 
 msgctxt "#30136"
-msgid "Kodi default"
-msgstr "Kodi default"
+msgid "MrMC default"
+msgstr "MrMC default"
 
 msgctxt "#30137"
 msgid "%d weeks"
