--- a/pvr.mediaportal.tvserver/resources/language/resource.language.fr_ca/strings.po
+++ b/pvr.mediaportal.tvserver/resources/language/resource.language.fr_ca/strings.po
@@ -21,8 +21,8 @@ msgid "Mediaportal Hostname"
 msgstr "Nom d'hôte de MediaPortal"
 
 msgctxt "#30001"
-msgid "Mediaportal Kodi plugin Port"
-msgstr "Port du plugiciel Kodi de MediaPortal"
+msgid "Mediaportal MrMC plugin Port"
+msgstr "Port du plugiciel MrMC de MediaPortal"
 
 msgctxt "#30002"
 msgid "Free-to-air only"
@@ -277,8 +277,8 @@ msgid "Backend default"
 msgstr "Valeur par défaut de la dorsale"
 
 msgctxt "#30136"
-msgid "Kodi default"
-msgstr "Valeur par défaut de Kodi"
+msgid "MrMC default"
+msgstr "Valeur par défaut de MrMC"
 
 msgctxt "#30137"
 msgid "%d weeks"
