--- a/pvr.mediaportal.tvserver/resources/language/resource.language.ro_ro/strings.po
+++ b/pvr.mediaportal.tvserver/resources/language/resource.language.ro_ro/strings.po
@@ -21,8 +21,8 @@ msgid "Mediaportal Hostname"
 msgstr "Mediaportal Hostname"
 
 msgctxt "#30001"
-msgid "Mediaportal Kodi plugin Port"
-msgstr "Portul pluginului Mediaportal Kodi"
+msgid "Mediaportal MrMC plugin Port"
+msgstr "Portul pluginului Mediaportal MrMC"
 
 msgctxt "#30002"
 msgid "Free-to-air only"
@@ -277,8 +277,8 @@ msgid "Backend default"
 msgstr "Furnizor din spate implicit"
 
 msgctxt "#30136"
-msgid "Kodi default"
-msgstr "Implicit pentru Kodi"
+msgid "MrMC default"
+msgstr "Implicit pentru MrMC"
 
 msgctxt "#30137"
 msgid "%d weeks"
